--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,57 @@ permissions:
   contents: write
 
 jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: |
+          if [ -f package-lock.json ] || [ -f yarn.lock ]; then
+            npm install
+          fi
+
+      - name: Build project
+        run: |
+          if [ -f package.json ]; then
+            npm run build || echo "No build step"
+          fi
+
+      - name: Detect publish directory
+        id: detect
+        run: |
+          if [ -d dist ]; then
+            echo "publish_dir=./dist" >> $GITHUB_OUTPUT
+          elif [ -d build ]; then
+            echo "publish_dir=./build" >> $GITHUB_OUTPUT
+          else
+            echo "publish_dir=./" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ${{ steps.detect.outputs.publish_dir }}
+name: Deploy to GitHub Pages
+
+on:
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: write
+
+jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
